--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "3.5"
 install:
   - cp contrib/env-sample .env
-  - pip install -q -r requirements.txt
+  - pip install -r requirements.txt
 script:
   - python manage.py test
