--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-languange: python
+language: python
 python:
- - "3.5"
+  - "3.5"
 install:
- - cp contrib/venv-sample .env
- - pip install -r requirements.txt
+  - cp contrib/env-sample .env
+  - pip install -q -r requirements.txt
 script:
- - python manage.py test
+  - python manage.py test
